...
    <string name="title_translator">Translator</string>
    <string name="text_topic">Topic</string>
    /Curriculum Section
    //main
    <string name="def">Definition :</string>
    //adverb.yes
    <string name="yes_title">Yes</string>>
    <string name="yes_content">Used to give a positive answer or reply to a question, request, or offer; used to give an affirmative response.</string>
    //adverb.no
    <string name="no_title">No</string>
    <string name="no_content">Used to give a negative response; the opposite of yes. The movement is sometimes once, sometimes twice, sometimes plural, depending on the contexts. </string>
    >
    <string name="almost_title">Almost</string>
    <string name="almost_content">Almost means nearly, roughly, or not quite. If you are almost as tall as your brother, it means he is still just a bit taller than you are!</string>
    >

...
