...

        android:layout_height="wrap_content"
        android:padding="16dp">


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"


            android:hapticFeedbackEnabled="false"
...
